--- a/src/Component/Task.css
+++ b/src/Component/Task.css
@@ -7,12 +7,14 @@ li{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 200px;
+    width: 225px;
     border:1px solid black;
     padding:5px;
 }
 li::before{
-    content: '@';
+    content: '>';
+    font-size: 15px;
+    font-weight: bold;
     margin-right: 5px;
     color: red;
 }
